--- a/packages/org.eclipse.epp.package.committers/macosx_narrow_book.css
+++ b/packages/org.eclipse.epp.package.committers/macosx_narrow_book.css
@@ -4,4 +4,13 @@ h1,h2           { color: Black }
 	h1, h2{
 		color: #f0f0f0;
 	}
+	
+	/* darken images to add some comfort while reading in dark theme */
+	img {
+		opacity: .75;
+		transition: opacity .5s ease-in-out;
+	}
+	img:hover {
+		opacity: 1;
+	}
 }
